# flash-newton-schulz

./: .gitattributes  .gitignore  README.md  benchmark.py  newton_schulz_triton.py  plot_levy.py  pyproject.toml  run_all_bench.sh  turbo_muon_optax.py  turbo_muon_torch.py  unify_plots.py
gradient-exploration/: figures.py  gradients.py  modded_nanogpt.py  plot.py  run.sh
gradient-exploration/ns_variants/: __init__.py  flash_ns.py  muon.py  polar_express.py  reference.py
paper_exps/figures/: benchmark.py  plot_levy.py  unify_plots.py
paper_exps/gradient-exploration/: README.md  gpt.py  modded_nanogpt.py  plot_gpt.py  run.sh  toy_gpt.py
paper_exps/gradient-exploration/ns_variants/: __init__.py  flash_ns.py  muon.py  reference.py
paper_exps/results/: 0_levy-1-0.csv  0_levy-1-5.csv  0_levy-2-0.csv  0_normal_unif.csv  0_normal_unif_f32.csv  0_normal_unif_xl.csv  0_normal_unif_xl_f32.csv
paper_exps/speedrun-cifar/: airbench94_polar.py  airbench94_record.py  airbench96_faster.py  ns_variants.py  polar_express.py  setup.py
paper_exps/speedrun-cifar/airbench/: __init__.py  lib_airbench93.py  lib_airbench96.py  utils.py
paper_exps/speedrun-nanogpt/: train_gpt.py  train_gpt_medium.py
results/: 0_levy-1-0.csv  0_levy-1-5.csv  0_levy-2-0.csv  0_normal_unif.csv  0_normal_unif_f32.csv  0_normal_unif_xl.csv  0_normal_unif_xl_f32.csv
speedrun-cifar/: airbench94.py  airbench94_polar.py  aol_conv.py  ns_variants.py  run.sh
speedrun-cifar/airbench/: lib_airbench94.py  lib_airbench95.py
speedrun-nanogpt/: train_gpt.py  train_gpt_medium.py
